# robot_utilities-dev

./: README.md
apc_msgs/: CMakeLists.txt
apc_msgs/srv/: TrajectoryGenerate.srv
apc_robot/: CMakeLists.txt  README.md  package.xml
apc_robot/cfg/: gain_definition.yaml  robot.yaml
apc_robot/include/apc_robot/: apc_arms_cartesian.h  apc_robot_moveit.h  base.h  pr2_head.h  pr2_manager.h
apc_robot/launch/: arms_cartesian.launch  pr2_moveit.launch
apc_robot/scripts/: posture.py
apc_robot/src/: apc_arms_cartesian.cpp  apc_arms_joint.cpp  apc_base_driver.cpp  apc_baxter_commander.cpp  apc_robot_grippers.cpp  apc_robot_moveit.cpp  base.cpp  pr2_head.cpp  pr2_manager.cpp  pr2_torso.cpp  print_cartesian_pose.cpp  print_state.cpp
apc_robot/src/testing/: README.md  cartesian_path.cpp  kinematic_model.cpp  movegroup_test.cpp  pickandplace.cpp  test_video_demo.cpp  testing_node.cpp
apc_sm/: CMakeLists.txt  package.xml
apc_sm/include/apc_sm/: pickUpMachine.h
apc_sm/launch/: sm.launch
apc_sm/src/: StateMachine_Node.cpp
data_recorder/: CMakeLists.txt  package.xml
data_recorder/include/data_recorder/: data_recorder.h
data_recorder/src/: data_recorder.cpp
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/include/trajectory_generator/: trajectoryGenerator.h
trajectory_generator/src/: trajectoryGenerator.cpp  trajectory_generator_node.cpp
trajectory_planner/: CMakeLists.txt  README.md  package.xml
trajectory_planner/config/: circular_trajectory.yaml
trajectory_planner/include/trajectory_planner/: circle_trajectory.h
trajectory_planner/launch/: circular_trajectory.launch
trajectory_planner/matlab/: spherical_trajectory.m  spherical_trajectory_script.m
trajectory_planner/src/: circle_trajectory.cpp
