<?xml version="1.0"?>
<package>
  <name>data_recorder</name>
  <version>0.0.0</version>
  <description>The data_recorder package</description>

  <maintainer email="sven.cremer@mavs.uta.edu">Sven Cremer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <!--build_depend>cmake_modules</build_depend-->
  
  <run_depend>roscpp</run_depend>
  <!--run_depend>cmake_modules</run_depend-->

</package>
