<?xml version="1.0"?>
<package>
  <name>trajectory_generator</name>
  <version>0.0.0</version>
  <description>The trajectory_generator package</description>

  <maintainer email="sven.cremer@mavs.uta.edu">Sven Cremer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>
